Closed Bug 786915 Opened 12 years ago Closed 11 years ago

[Ion] AWFY shows a recent regression in Sunspider and v8

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smaug, Unassigned)

References

Details

(Whiteboard: [js:t])

I looked into v8-splay. bhackett and I tracked it down to TI eagerly propagating a null type from a (shadowed) property on the prototype to a property read. This hurts IonMonkey because it doesn't use GetProperty ICs if the value is not known to be definitely-object.

Brian wrote a patch to keep us from propagating these types if the property is shadowed. It fixes v8-splay and v8-raytrace, I haven't yet looked into sunspider.
I still see a regression on SunSpider.
Whiteboard: [js:T]
Whiteboard: [js:T] → [js:t]
Sunspider improved a lot with BC.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.