Don't eagerly fetch values from prototypes when analyzing reads on shadowed properties, bug 786915. r=jandem